# Code-based-dePCS

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
DistZKBench/: .gitignore  Cargo.toml  DistZKBench.md  Open DistZKBench Console.command  rust-toolchain.toml
DistZKBench/artifact/: README.md
DistZKBench/artifact/macos-apple-silicon/: QUICKSTART.md
DistZKBench/artifact/macos-apple-silicon/configs/: macos_toy_star.yaml
DistZKBench/artifact/macos-apple-silicon/scripts/: run_quick.sh
DistZKBench/artifact/main-linux/: QUICKSTART.md
DistZKBench/artifact/main-linux/configs/: remote_calibration.yaml.example  strict_core.yaml  strict_preflight.yaml  toy.yaml
DistZKBench/artifact/main-linux/scripts/: agent_netns_acceptance.py  check_results.py  cleanup.sh  linux_strict_smoke.sh  remote_preflight.sh  remote_run_toy.sh  remote_two_host_calibration.sh  run_all.sh  run_quick.sh
DistZKBench/artifacts/gcp-m2-20260711/: distzkbench-m2-paper100-20260711.tar.gz.sha256
DistZKBench/artifacts/gcp-m2-20260711/protocol11_m2_paper100/: summary.csv  summary.html  summary.json  verify-pcs-results.json
DistZKBench/artifacts/gcp-m2-20260711/protocol11_m2_paper100/system-evidence/: linux_strict_smoke.txt
DistZKBench/artifacts/gcp-netns-v2-20260711/: README.md  cloud-cleanup-audit.txt  distzkbench-netns-v2-paper100-20260711.tar.gz.sha256
DistZKBench/artifacts/gcp-netns-v2-20260711/results/protocol11_m2_paper100_netns_v2/: summary.csv  summary.html  summary.json  verify-pcs-results.json
DistZKBench/artifacts/gcp-netns-v2-20260711/results/protocol11_m2_paper100_netns_v2/system-evidence/: acceptance.json  framework-commit.txt  gcp_protocol11_m2.yaml  gcp_strict_smoke.yaml  lscpu.txt  uname.txt
DistZKBench/configs/: gcp_protocol11_m2.yaml  gcp_strict_smoke.yaml
DistZKBench/configs/examples/: blackbox_echo.yaml  pq_depcs_batch_small.yaml  pq_depcs_native_small.yaml  pq_depcs_resume_small.yaml  toy_fullmesh_4.yaml  toy_pingpong_2.yaml  toy_star_4.yaml
DistZKBench/console/: README.md  index.html  run_console.sh  server.py
DistZKBench/crates/dzb-agent/: Cargo.toml
DistZKBench/crates/dzb-agent/src/: lib.rs  main.rs
DistZKBench/crates/dzb-controller/: Cargo.toml
DistZKBench/crates/dzb-controller/src/: main.rs  ui.html  ui.rs
DistZKBench/crates/dzb-core/: Cargo.toml
DistZKBench/crates/dzb-core/src/: config.rs  lib.rs  manifest.rs  platform.rs  run_id.rs  units.rs
DistZKBench/crates/dzb-metrics/: Cargo.toml
DistZKBench/crates/dzb-metrics/src/: lib.rs
DistZKBench/crates/dzb-platform/: Cargo.toml
DistZKBench/crates/dzb-platform-darwin/: Cargo.toml
DistZKBench/crates/dzb-platform-darwin/src/: lib.rs
DistZKBench/crates/dzb-platform-linux/: Cargo.toml
DistZKBench/crates/dzb-platform-linux/src/: lib.rs
DistZKBench/crates/dzb-platform/src/: lib.rs
DistZKBench/crates/dzb-report/: Cargo.toml
DistZKBench/crates/dzb-report/src/: lib.rs
DistZKBench/crates/dzb-runner/: Cargo.toml
DistZKBench/crates/dzb-runner/src/: lib.rs  main.rs
DistZKBench/crates/dzb-sdk/: Cargo.toml
DistZKBench/crates/dzb-sdk/src/: context.rs  ffi.rs  lib.rs  persistent.rs  protocol.rs  rng.rs  runtime.rs
DistZKBench/crates/dzb-toy-adapter/: Cargo.toml
DistZKBench/crates/dzb-toy-adapter/src/: main.rs
DistZKBench/crates/dzb-transport/: Cargo.toml
DistZKBench/crates/dzb-transport/src/: counters.rs  frame.rs  lib.rs  shaper.rs  tcp.rs  topology.rs
DistZKBench/docs/: public_api.md
DistZKBench/ffi-fixtures/: pingpong.c
DistZKBench/include/: distzkbench.h
DistZKBench/scripts/: normalize_results.py
Doc/: completion_audit.md  depcs_audit_report.md  depcs_audit_report_v2.md  implementation_progress.md  pcs_batch_backend_soundness.md  pcs_theory_audit.md  prototype_boundary.md  reproducibility_runbook.md
Doc/audits/: depcs_audit_report_v2.md  pcs_theory_audit.md
crates/pq-core/: Cargo.toml
crates/pq-experiments/: Cargo.toml
crates/pq-experiments/scripts/: depcs-ligesis-compare.py
crates/pq-experiments/src/: main.rs  network.rs
crates/pq-net/: Cargo.toml
crates/pq-pcs/: Cargo.toml
crates/pq-pcs/src/: lib.rs
crates/pq-pcs/src/artifact/: mod.rs
crates/pq-pcs/src/depcs/: backend.rs  compact_codec.rs  mod.rs  proof_size.rs  protocol10_encoding.rs  protocol11.rs  protocol11_distributed_brakedown.rs  protocol6_composition.rs  protocol7_merkle_commitments.rs  protocol8_e_commitments.rs  protocol9_f_commitments.rs  tests.rs  types.rs  utils.rs
crates/pq-pcs/src/depcs/pcs_backend/: basefold.rs  deepfold.rs  mod.rs
crates/pq-pcs/src/legacy/: basefold.rs  mod.rs  protocol11_local.rs
crates/pq-pcs/src/legacy/deepfold/: mod.rs
crates/pq-piop/: Cargo.toml
crates/pq-piop-plonkish/: Cargo.toml
crates/pq-piop-plonkish/src/: lib.rs
crates/pq-piop-r1cs/: Cargo.toml
crates/pq-piop-r1cs/src/: lib.rs
crates/pq-sumcheck/: Cargo.toml
crates/pq-transcript/: Cargo.toml
docs/protocol11/: ERRATA.md  SECURITY.md  SPEC.md
pq_dPCS/: Cargo.toml  LICENSE-MIT  README.md
pq_dPCS/crates/pq-experiments/: Cargo.toml
pq_dPCS/crates/pq-experiments/src/: main.rs
pq_dPCS/crates/pq-pcs/: Cargo.toml
pq_dPCS/crates/pq-pcs/src/: hash.rs  lib.rs
pq_dPCS/crates/pq-pcs/src/depcs/: compact_codec.rs  mod.rs  proof_size.rs  protocol10_encoding.rs  protocol11.rs  protocol7_merkle_commitments.rs  protocol8_e_commitments.rs  protocol9_f_commitments.rs  types.rs
pq_dPCS/crates/pq-pcs/src/depcs/pcs_backend/: mod.rs
pq_dPCS/scripts/: benchmark.py  pcs-benchmark-linux.sh
results/: README.md
results/bench-1780169639/: source.csv  source.json  summary.txt
results/bench-1780170357/: source.csv  source.json  summary.txt
results/bench-1780170406/: source.csv  source.json  summary.txt
scripts/: README.md  benchmark.py  depcs-ligesis-compare.py  interactive-linux.sh  interactive-macos.sh  interactive-powershell.cmd  interactive-powershell.ps1  pcs-benchmark-linux.sh  pcs-benchmark-macos.sh  pcs-benchmark-powershell.cmd  run_benchmarks.ps1  run_benchmarks.sh  run_experiments.ps1  run_experiments.sh
(+584 files in other folders)
