[workspace]
members = [
    "crates/pq-core",
    "crates/pq-pcs",
    "crates/pq-experiments",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xinzhe-chen/Code-based-dePCS"

[workspace.dependencies]
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
