[workspace]
members = [
    "crates/dzb-core",
    "crates/dzb-platform",
    "crates/dzb-platform-linux",
    "crates/dzb-platform-darwin",
    "crates/dzb-transport",
    "crates/dzb-sdk",
    "crates/dzb-metrics",
    "crates/dzb-runner",
    "crates/dzb-agent",
    "crates/dzb-controller",
    "crates/dzb-report",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
mio = { version = "0.8", features = ["net", "os-poll"] }
