[package]
name = "pq-pcs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pq-core = { path = "../pq-core" }
pq-transcript = { path = "../pq-transcript" }
rayon = { workspace = true }
serde = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
