[package]
name = "pq-pcs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rayon = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
paper-deepfold = { package = "deepfold", path = "../../third_party/deepfold-bench-v0.1/deepfold" }
paper-util = { package = "util", path = "../../third_party/deepfold-bench-v0.1/util" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
