[package]
name = "pq-piop-r1cs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pq-core = { path = "../pq-core" }
pq-pcs = { path = "../pq-pcs" }
pq-piop = { path = "../pq-piop" }
pq-sumcheck = { path = "../pq-sumcheck" }
pq-transcript = { path = "../pq-transcript" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
