[package]
name = "dzb-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
dzb-core = { path = "../dzb-core" }
dzb-platform = { path = "../dzb-platform" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "dzb-agent"
path = "src/main.rs"
