[package]
name = "dzb-controller"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
dzb-core = { path = "../dzb-core" }
dzb-platform = { path = "../dzb-platform" }
dzb-platform-linux = { path = "../dzb-platform-linux" }
dzb-platform-darwin = { path = "../dzb-platform-darwin" }
dzb-runner = { path = "../dzb-runner" }
dzb-metrics = { path = "../dzb-metrics" }
dzb-report = { path = "../dzb-report" }
dzb-sdk = { path = "../dzb-sdk" }
dzb-transport = { path = "../dzb-transport" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "dzb"
path = "src/main.rs"
