[package]
name = "dzb-metrics"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
dzb-core = { path = "../dzb-core" }
dzb-runner = { path = "../dzb-runner" }
dzb-sdk = { path = "../dzb-sdk" }
dzb-transport = { path = "../dzb-transport" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[lints]
workspace = true
