[package]
name = "dzb-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
dzb-core = { path = "../dzb-core" }
dzb-transport = { path = "../dzb-transport" }
mio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
