[package]
name = "pq-experiments"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pq-core = { path = "../pq-core" }
pq-pcs = { path = "../pq-pcs" }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "pq-experiments"
path = "src/main.rs"

[lints]
workspace = true
